chore: upgrade storybook

--- a/doc/GetStarted/Introduction.stories.mdx
+++ b/doc/GetStarted/Introduction.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta } from "@storybook/addon-docs/blocks";
+import { Meta } from "@storybook/addon-docs";
 
 import themesPackage from "../../packages/themes/package.json";
 import corePackage from "../../packages/core/package.json";
@@ -22,26 +22,26 @@ The UI Kit can be used via the following **four packages**:
 
 <ul>
   <li>
-    <b>Themes</b> - <code>v{themesPackage.version}</code> - Theme specifications according to the
+    <b>Themes</b> - v{themesPackage.version} - Theme specifications according to the
     Design System Style guides, which include Colors, Typography definitions and Spacings for the
     Grid elements.
   </li>
   <li>
-    <b>Icons</b> - <code>v{iconsPackage.version}</code> - The icon library provided by the Design
+    <b>Icons</b> - v{iconsPackage.version} - The icon library provided by the Design
     System team, wrapped in React Components.
   </li>
   <li>
-    <b>Core</b> - <code>v{corePackage.version}</code> - The main package, where the React components
+    <b>Core</b> - v{corePackage.version} - The main package, where the React components
     that are <b>fully compliant</b> (mainly stable components) with Design system guidelines and UI
     Kit best practices reside.
   </li>
   <li>
-    <b>Lab</b> - <code>v{labPackage.version}</code> - React components
+    <b>Lab</b> - v{labPackage.version} - React components
     <b>contributed by external teams</b> for specific use cases and <b>not fully compliant</b> with the
     Design System guidelines.
   </li>
   <li>
-    <b>Code Editor</b> - <code>v{codeEditor.version}</code> - A wrapper to the
+    <b>Code Editor</b> - v{codeEditor.version} - A wrapper to the
     <b>React Monaco editor</b> (https://github.com/react-monaco-editor/react-monaco-editor) compliant
     with the Hitachi Vantara Design System Style guidelines.
   </li>
