--- a/doc/Forms/Forms.stories.mdx
+++ b/doc/Forms/Forms.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
+import { Meta, Story, Preview } from "@storybook/addon-docs";
 import Formik from "./Formik";
 import ReactHookForm from "./ReactHookForm";
 import ReactForm from "./ReactForm";
