--- a/doc/Foundation/Colors.stories.mdx
+++ b/doc/Foundation/Colors.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
+import { Meta, Story, Preview } from "@storybook/addon-docs";
 import Colors from "./Colors";
 import { MaturityStatus } from "../../.storybook/blocks/MaturityStatus";
 
