--- a/doc/Foundation/Icons/Library.stories.mdx
+++ b/doc/Foundation/Icons/Library.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
+import { Meta, Story, Preview } from "@storybook/addon-docs";
 import IconLibrary from "./Library";
 import { ActualSize, FemaleRunning } from "@hv/uikit-react-icons";
 import * as iconComponentList from "@hv/uikit-react-icons/dist/icons";
