--- a/doc/Foundation/Typography/Typography.stories.mdx
+++ b/doc/Foundation/Typography/Typography.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview, ArgsTable } from "@storybook/addon-docs/blocks";
+import { Meta, Story, Preview, ArgsTable } from "@storybook/addon-docs";
 
 import { HvTypography } from "@hv/uikit-react-core";
 
