--- a/doc/GetStarted/Changelogs/CodeEditor.stories.mdx
+++ b/doc/GetStarted/Changelogs/CodeEditor.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Description } from "@storybook/addon-docs/blocks";
+import { Meta, Description } from "@storybook/addon-docs";
 import Changelog from "../../../packages/code-editor/CHANGELOG.md";
 
 <Meta title="Get Started/Changelog/Code Editor" />
