--- a/doc/GetStarted/Changelogs/Icons.stories.mdx
+++ b/doc/GetStarted/Changelogs/Icons.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Description } from "@storybook/addon-docs/blocks";
+import { Meta, Description } from "@storybook/addon-docs";
 import Changelog from "../../../packages/icons/CHANGELOG.md";
 
 <Meta title="Get Started/Changelog/Icons" />
