--- a/doc/GetStarted/ComponentList.stories.mdx
+++ b/doc/GetStarted/ComponentList.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta } from "@storybook/addon-docs/blocks";
+import { Meta } from "@storybook/addon-docs";
 
 import { HvTypography } from "@hv/uikit-react-core";
 
