--- a/doc/GetStarted/MigrationV2x.stories.mdx
+++ b/doc/GetStarted/MigrationV2x.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Description } from "@storybook/addon-docs/blocks";
+import { Meta, Description } from "@storybook/addon-docs";
 import migration from "../../MIGRATION_v2x.md";
 
 <Meta title="Get Started/Migration/From V1.x" />
