--- a/doc/GetStarted/MigrationV3x.stories.mdx
+++ b/doc/GetStarted/MigrationV3x.stories.mdx
@@ -1,7 +1,6 @@
-import { Meta, Description } from "@storybook/addon-docs/blocks";
+import { Meta, Description } from "@storybook/addon-docs";
 import migration from "../../MIGRATION_v3x.md";
 
 <Meta title="Get Started/Migration/From V2.x" />
 
 <Description>{migration}</Description>
-
