--- a/packages/lab/src/Table/stories/TableHooks.stories.mdx
+++ b/packages/lab/src/Table/stories/TableHooks.stories.mdx
@@ -27,6 +27,12 @@ Together is easier to build powerful experiences and extend the features offered
 
 ## The `useHv*` hooks
 
+<Usage>{'import { useHvTable } from "react-table";'}</Usage>
+
+<Preview withToolbar>
+  <Story inline story={stories.UseHvTable} />
+</Preview>
+
 For further ease, you can use the provided `useHvTable` hook that wraps the [React Table's `useTable` hook](https://react-table.tanstack.com/docs/api/useTable) and
 provides the following functionality:
 
@@ -165,6 +171,27 @@ Individual rows can have its selection state locked (becoming either not selecta
 
 <Preview withToolbar>
   <Story inline story={stories.LockedSelection} />
+</Preview>
+
+## Alternative Layout
+
+react-table provides some layout plugin hooks useful for instance when needing to virtualize rows and cells for performance or enabling user resizable tables/columns.
+They rely on the core column options `width`, `minWidth` and `maxWidth`, that are used to calculate column and cell widths.
+
+- `useBlockLayout` renders headers and cells as inline-block elements with explicit width.
+- `useAbsoluteLayout` renders headers and cells as absolutely positioned elements with explicit width.
+- `useFlexLayout` renders headers and cells as inline-block elements, with the `width` being used as the `flex-basis` and `flex-grow`.
+
+Note that not all built-in styles will apply when using any of the alternative layouts, so aditional styling might be needed to acomplish the same look.
+Also, styles affecting element's widths (`width`, `min-width`, `max-width` and flex properties) must be avoided and the core column options used instead.
+
+Most layouts work well with the default html table elements, keeping the semantics while loosing the table layout rules.
+Elements can be changed (to `div` or any other apropriate html element) by using the `component` property.
+
+`useGridLayout` implies a totally diferent dom structure and is currently not supported by the HvTable components.
+
+<Preview withToolbar>
+  <Story inline story={stories.AlternativeLayout} />
 </Preview>
 
 # Stuff still to be documented
