feat(table): add manual row selection key. HVUIKIT-5958

--- a/packages/lab/src/Table/stories/TableHooks.stories.mdx
+++ b/packages/lab/src/Table/stories/TableHooks.stories.mdx
@@ -80,6 +80,14 @@ This hook is originally based on the code `useRowSelect` hook from `react-table`
   <Story inline story={stories.Selection} />
 </Preview>
 
+## Controlled selection
+
+a selection state can also be included in the data and toggled externally.
+
+<Preview withToolbar>
+  <Story inline story={stories.ControlledSelection} />
+</Preview>
+
 ## Bulk selection and actions
 
 Rows can also be selected in bulk and actions can be performed on the current selection.
