feat(table): make header groups compliant with Design System guidelines

--- a/packages/lab/src/Table/stories/TableHooks.stories.mdx
+++ b/packages/lab/src/Table/stories/TableHooks.stories.mdx
@@ -51,6 +51,7 @@ The following plugin hooks are available:
 - `useHvSortBy`: manages the table's header sorting functionality. See <a href="#sorting" className="sbdocs-a">Sorting</a>.
 - `useHvRowExpand`: manages the row expanding functionality. See <a href="#row-expanding" className="sbdocs-a">Row expanding</a>.
 - `useHvTableSticky`: allows defining sticky headers and columns. See <a href="#sticky-headers-and-columns" className="sbdocs-a">Sticky Headers And Columns</a>.
+- `useHvHeaderGroups`: allows defining grouped headers. See <a href="#grouped-headers" className="sbdocs-a">Grouped Headers</a>.
 
 ## Pagination
 
@@ -208,4 +209,10 @@ Elements can be changed (to `div` or any other apropriate html element) by using
 
 <Preview withToolbar>
   <Story inline story={stories.ServerSide} />
+</Preview>
+
+## Grouped Headers
+
+<Preview withToolbar>
+  <Story inline story={stories.GroupedHeaders} />
 </Preview>
