feat(table): fix behaviour of sticky columns and sticky headers

--- a/packages/lab/src/Table/stories/TableHooks.stories.mdx
+++ b/packages/lab/src/Table/stories/TableHooks.stories.mdx
@@ -154,6 +154,9 @@ The following options are supported on any `Column` object passed to the `column
 - `width: Int`
   - Defaults to 150
   - Specifies the width for the column
+- `minWidth: Int`
+  - Defaults to 0
+  - Specifies the minimum width for the column
 
 ### Usage
 
