--- a/doc/Foundation/Theming/Theming.stories.mdx
+++ b/doc/Foundation/Theming/Theming.stories.mdx
@@ -5,6 +5,7 @@ import LinkTo from "@storybook/addon-links/react";
 import { HvProvider } from "@hv/uikit-react-core";
 import { createTheme } from "@material-ui/core/styles";
 
+import SpacingUsage from "./SpacingUsage";
 import ThemePreviewMix from "./ThemePreviewMix";
 
 import { MaturityStatus } from "../../../.storybook/blocks/MaturityStatus";
@@ -381,3 +382,65 @@ export const myCustomTheme = createTheme(myRawCustomTheme);
     <ThemePreviewMix />
   </HvProvider>
 </Story>
+
+## Spacing
+
+UI Kit provides a spacing helper function the `hvSpacing`.
+This function helps generate the correct spacing values for the ui elements when required,
+the function is contained within the theme object.
+The function receives one of the following values: 
+`["xs","sm","md","lg","xl"]`
+
+These values represent the different spacings defined by design system.
+the function will return the appropriate value in pixels to achieve the desired spacing
+
+```
+xs -> 10px
+sm -> 20px
+md -> 30px
+lg -> 40px
+xl -> 90px
+```
+
+if more than one argument is provided to the `hvSpacing` it will generate the shorthand form of the values
+this can be seen in the example below.
+
+## Example
+
+```jsx
+import React from "react";
+import { makeStyles } from "@material-ui/core";
+import { HvButton, HvCheckBox } from "@hv/uikit-react-core";
+
+const SpacingUsage = () => {
+  const useStyles = makeStyles((theme) => ({
+    primary: {},
+    secondary: {},
+    buttonContainer: {
+      "& $primary": {
+        marginRight: theme.hvSpacing("xs"),
+        marginBottom: theme.hvSpacing("md"),
+      },
+      "& $secondary": {
+        margin: theme.hvSpacing(0, "xs", "md", 0),
+      },
+    },
+  }));
+
+  const classes = useStyles();
+  return (
+    <div className={classes.buttonContainer}>
+      <HvButton className={classes.primary} category="primary">Test 1</HvButton>
+      <HvButton className={classes.secondary} category="secondary">Test 2</HvButton>
+      <HvButton className={classes.secondary} category="secondary">Test 3</HvButton>
+    </div>
+  );
+};
+```
+
+## Result
+
+<Story name="Spacing">
+  <SpacingUsage />
+</Story>
+
