docs: add OSS link to documentation

--- a/doc/Community/License.stories.mdx
+++ b/doc/Community/License.stories.mdx
@@ -210,3 +210,5 @@ The UI Kit component library is licensed under the **Apache License Version 2.0*
    See the License for the specific language governing permissions and
    limitations under the License.
 ```
+
+Details for the required packages and their licenses can be obtained in https://knowledge.hitachivantara.com/Documents/Open_Source_Software.
