docs(table): add examples with grouped rows and useHeaderGroups hook

--- a/packages/lab/src/Table/stories/TableHooks.stories.mdx
+++ b/packages/lab/src/Table/stories/TableHooks.stories.mdx
@@ -131,6 +131,18 @@ _Note: This hook depends on the `useExpanded` hook from `react-table`, but when 
   <Story inline story={stories.Expandable} />
 </Preview>
 
+## useGroupBy
+
+Tables rows can have the capability of being expanded to show more details.
+
+Check [React Table's `useGroupBy` documentation](https://react-table.tanstack.com/docs/api/useGroupBy) for configuration details.
+
+This example requires useHvRowExpand to show the grouped rows.
+
+<Preview withToolbar>
+  <Story inline story={stories.GroupBy} />
+</Preview>
+
 ## useHvTableSticky
 
 The table headers can be fixed at the top, allowing it to keep always visible when table has vertical scrolling enabled.
