feat(table): add column resize capability

--- a/packages/lab/src/Table/stories/TableHooks.stories.mdx
+++ b/packages/lab/src/Table/stories/TableHooks.stories.mdx
@@ -267,3 +267,12 @@ doing the drag/drop operation via `SPACE + ARROW` Keys.
 <Preview withToolbar>
   <Story inline story={stories.DragAndDrop} />
 </Preview>
+
+## Column Resize
+
+Columns can be resized using the useHvResizeColumn hook, which leverages the react-table capabilities. 
+Resize, although not an accessible functionality, it allows columns to be resizable via dragging column right border.
+
+<Preview withToolbar>
+  <Story inline story={stories.ColumnResize} />
+</Preview>
