--- a/doc/GetStarted/Instalation.stories.mdx
+++ b/doc/GetStarted/Instalation.stories.mdx
@@ -6,7 +6,7 @@ import LinkTo from "@storybook/addon-links/react";
 
 # Installation
 
-HV UI Kit is available as multiple npm packages. You can install them in any working React v16.x or v17.x project.
+HV UI Kit is composed of multiple mostly independent npm packages. You can install them in any working React v16.x or v17.x project.
 
 ## Package installation
 
