Mention older v3.x version in Instalation docs

--- a/doc/GetStarted/Instalation.stories.mdx
+++ b/doc/GetStarted/Instalation.stories.mdx
@@ -36,6 +36,8 @@ The `@hitachivantara/uikit-react-icons` is installed as a dependency of `@hitach
 
 The above commands will install the latest version of **UI Kit 3.x**. It implements the **DS 3.x** specifications.
 
+Older v3.x packages use a different registry and import names. If needed, please follow the documentation at https://lumada-design.github.io/uikit/v3-old-registry/?path=/docs/get-started-installation--page.
+
 If your project's design follows **DS 1.x** you must use the **UI Kit 2.x** release. Install it by suffixing "@2.\*" to the package names:
 
 ```shell
