docs: fix styling issues

--- a/doc/GetStarted/Introduction.stories.mdx
+++ b/doc/GetStarted/Introduction.stories.mdx
@@ -22,28 +22,26 @@ The UI Kit can be used via the following **four packages**:
 
 <ul>
   <li>
-    <b>Themes</b> - v{themesPackage.version} - Theme specifications according to the
-    Design System Style guides, which include Colors, Typography definitions and Spacings for the
-    Grid elements.
+    <b>Themes</b> - v{themesPackage.version} - Theme specifications according to the Design System
+    Style guides, which include Colors, Typography definitions and Spacings for the Grid elements.
   </li>
   <li>
-    <b>Icons</b> - v{iconsPackage.version} - The icon library provided by the Design
-    System team, wrapped in React Components.
+    <b>Icons</b> - v{iconsPackage.version} - The icon library provided by the Design System team,
+    wrapped in React Components.
   </li>
   <li>
-    <b>Core</b> - v{corePackage.version} - The main package, where the React components
-    that are <b>fully compliant</b> (mainly stable components) with Design system guidelines and UI
-    Kit best practices reside.
+    <b>Core</b> - v{corePackage.version} - The main package, where the React components that are{" "}
+    <b>fully compliant</b> (mainly stable components) with Design system guidelines and UI Kit best
+    practices reside.
   </li>
   <li>
-    <b>Lab</b> - v{labPackage.version} - React components
-    <b>contributed by external teams</b> for specific use cases and <b>not fully compliant</b> with the
-    Design System guidelines.
+    <b>Lab</b> - v{labPackage.version} - React components <b>contributed by external teams</b> for
+    specific use cases and <b>not fully compliant</b> with the Design System guidelines.
   </li>
   <li>
-    <b>Code Editor</b> - v{codeEditor.version} - A wrapper to the
-    <b>React Monaco editor</b> (https://github.com/react-monaco-editor/react-monaco-editor) compliant
-    with the Hitachi Vantara Design System Style guidelines.
+    <b>Code Editor</b> - v{codeEditor.version} - A wrapper to the <b>React Monaco editor</b>{" "}
+    (https://github.com/react-monaco-editor/react-monaco-editor) compliant with the Hitachi Vantara
+    Design System Style guidelines.
   </li>
 </ul>
 
