docs: update component list

--- a/doc/GetStarted/Introduction.stories.mdx
+++ b/doc/GetStarted/Introduction.stories.mdx
@@ -31,8 +31,7 @@ The UI Kit can be used via the following **four packages**:
   </li>
   <li>
     <b>Core</b> - v{corePackage.version} - The main package, where the React components that are{" "}
-    <b>fully compliant</b> (mainly stable components) with Design system guidelines and UI Kit best
-    practices reside.
+    <b>fully compliant</b> with Design system guidelines and UI Kit best practices reside.
   </li>
   <li>
     <b>Lab</b> - v{labPackage.version} - React components <b>contributed by external teams</b> for
