docs: remove references to stable

--- a/doc/Foundation/Icons/Library.stories.mdx
+++ b/doc/Foundation/Icons/Library.stories.mdx
@@ -9,8 +9,7 @@ import componentDefinitions from "../../GetStarted/ComponentVersioningTable/vers
 <Meta
   title="Foundation/Icons/Library"
   parameters={{
-    maturityStatus: componentDefinitions.dsClassification.stable,
-    dsVersion: "3.5.0",
+    dsVersion: componentDefinitions.dsVersion.v3,
   }}
 />
 
