--- a/doc/Foundation/Theming/Theming.stories.mdx
+++ b/doc/Foundation/Theming/Theming.stories.mdx
@@ -14,7 +14,6 @@ import componentDefinitions from "../../GetStarted/ComponentVersioningTable/vers
 <Meta
   title="Foundation/Theming"
   parameters={{
-    maturityStatus: componentDefinitions.dsClassification.stable,
     dsVersion: componentDefinitions.dsVersion.v3,
   }}
 />
@@ -48,7 +47,7 @@ If you want to override one of the UI Kit themes you must build your custom them
 
 The function receives a JSON object with the same structure as the Material-UI [theme](https://material-ui.com/customization/default-theme/) with the previously mentioned `hv` property which contains the UI Kit's extra [definitions](https://github.com/lumada-design/hv-uikit-react/blob/master/packages/themes/src/dawn.json).
 
-The `createTheme` will output a Material-UI theme object with the required values that then can be passed to the `HvProvider`. 
+The `createTheme` will output a Material-UI theme object with the required values that then can be passed to the `HvProvider`.
 The `HvProvider` will override the properties in the default theme applying the received definitions on top.
 
 ```jsx
@@ -115,7 +114,7 @@ const myCustomTheme = createTheme(myRawCustomTheme);
 ```
 
 export const myRawCustomTheme = {
-  "hv": {
+  hv: {
     type: "light",
     name: "custom",
     palette: {
@@ -388,7 +387,7 @@ export const myCustomTheme = createTheme(myRawCustomTheme);
 UI Kit provides a spacing helper function the `hvSpacing`.
 This function helps generate the correct spacing values for the ui elements when required,
 the function is contained within the theme object.
-The function receives one of the following values: 
+The function receives one of the following values:
 `["xs","sm","md","lg","xl"]`
 
 These values represent the different spacings defined by design system.
@@ -430,9 +429,15 @@ const SpacingUsage = () => {
   const classes = useStyles();
   return (
     <div className={classes.buttonContainer}>
-      <HvButton className={classes.primary} category="primary">Test 1</HvButton>
-      <HvButton className={classes.secondary} category="secondary">Test 2</HvButton>
-      <HvButton className={classes.secondary} category="secondary">Test 3</HvButton>
+      <HvButton className={classes.primary} category="primary">
+        Test 1
+      </HvButton>
+      <HvButton className={classes.secondary} category="secondary">
+        Test 2
+      </HvButton>
+      <HvButton className={classes.secondary} category="secondary">
+        Test 3
+      </HvButton>
     </div>
   );
 };
@@ -443,4 +448,3 @@ const SpacingUsage = () => {
 <Story name="Spacing">
   <SpacingUsage />
 </Story>
-
