docs: reorganize Storybook component structure

--- a/doc/GetStarted/Changelogs/CodeEditor.stories.mdx
+++ b/doc/GetStarted/Changelogs/CodeEditor.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import Changelog from "../../../packages/code-editor/CHANGELOG.md";
 
-<Meta title="Get Started/Changelog/Code Editor" />
+<Meta title="Change Log/Code Editor" />
 
 <Description>{Changelog}</Description>
