--- a/doc/GetStarted/Changelogs/Themes.stories.mdx
+++ b/doc/GetStarted/Changelogs/Themes.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import Changelog from "../../../packages/themes/CHANGELOG.md";
 
-<Meta title="Get Started/Changelog/Themes" />
+<Meta title="Change Log/Themes" />
 
 <Description>{Changelog}</Description>
