--- a/doc/GetStarted/Changelogs/Lab.stories.mdx
+++ b/doc/GetStarted/Changelogs/Lab.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import Changelog from "../../../packages/lab/CHANGELOG.md";
 
-<Meta title="Get Started/Changelog/Lab" />
+<Meta title="Change Log/Lab" />
 
 <Description>{Changelog}</Description>
