docs: fix links' color on wicked

--- a/doc/Foundation/Theming/Theming.stories.mdx
+++ b/doc/Foundation/Theming/Theming.stories.mdx
@@ -44,7 +44,7 @@ The UI Kit components provides the two Design System themes: **Dawn** and **Wick
 </Story>
 
 The active theme is configured through the `HvProvider`'s `uiKitTheme` property and defaults to the **Dawn** theme.
-Check <LinkTo kind="Foundation/Provider" story="Main" className="sbdocs-a">the Provider's API documentation</LinkTo> for more details.
+Check <LinkTo kind="Foundation/Provider" story="Main" className="sbdocs sbdocs-a">the Provider's API documentation</LinkTo> for more details.
 
 ## Custom themes
 
