--- a/packages/lab/src/Table/stories/TableColumnRenderers.stories.mdx
+++ b/packages/lab/src/Table/stories/TableColumnRenderers.stories.mdx
@@ -21,7 +21,8 @@ import {
 <Meta title="Lab/Table Column Renderers" />
 
 # Table column renderers
-The UI Kit library provides a collection of utility functions that, together with the <LinkTo kind="Lab/Table Hooks" story="Main" className="sbdocs-a">Table Hooks</LinkTo>, 
+
+The UI Kit library provides a collection of utility functions that, together with the <LinkTo kind="Lab/Table Hooks" story="Main" className="sbdocs sbdocs-a">Table Hooks</LinkTo>,
 ease the setup of common column configurations, including the render function, alignment, missing data fallbacks and cell overflow.
 
 They add a set of out of the box features, not meant to be 100% feature complete, but instead, ease the majority of use-cases we have been encountering. If you need any customization or extension to these renderers, please feel free to copy and customize them.
