--- a/packages/lab/src/Table/stories/TableHooks.stories.mdx
+++ b/packages/lab/src/Table/stories/TableHooks.stories.mdx
@@ -12,7 +12,7 @@ import * as stories from "./TableHooks.stories.js";
 
 # Table hooks
 
-The UI Kit library provides a collection of **custom hooks** that ease the integration with the <LinkTo kind="Lab/Table" story="Main" className="sbdocs-a">HvTable elements</LinkTo> and allows more advanced use cases and better data handling.
+The UI Kit library provides a collection of **custom hooks** that ease the integration with the <LinkTo kind="Lab/Table" story="Main" className="sbdocs sbdocs-a">HvTable elements</LinkTo> and allows more advanced use cases and better data handling.
 
 Our custom hooks are built on top of [React Table](https://react-table.tanstack.com) which is an "headless" UI utility library to build data tables while retaining control over markup and styles. It consists of a collection of, lightweight, composable and extensible custom React hooks.
 
