docs(css-baseline): document css baseline styles

--- a/doc/GetStarted/Instalation.stories.mdx
+++ b/doc/GetStarted/Instalation.stories.mdx
@@ -54,7 +54,7 @@ function App({ children }) {
 ```
 
 Optionally, you can configure the active theme and locale, among others.
-Check <LinkTo kind="Foundation/Provider" story="Main" className="sbdocs-a">the Provider's API documentation</LinkTo> for further details.
+Check <LinkTo kind="Foundation/Provider" story="Main" className="sbdocs sbdocs-a">the Provider's API documentation</LinkTo> for further details.
 
 2. Now you can start using components:
 
@@ -65,3 +65,6 @@ function Example() {
   return <HvButton>Hello from UI Kit!</HvButton>;
 }
 ```
+
+3. For a fully functioning setup, you'll also need to setup a <LinkTo kind="Foundation/CSS Baseline" story="Page" className="sbdocs sbdocs-a">CSS Baseline</LinkTo>
+   and ensure <LinkTo kind="Foundation/Typography" story="Description" className="sbdocs sbdocs-a">the loading of the Open Sans font</LinkTo>.
