feat(css-baseline): add text-size-adjust reset

--- a/doc/Foundation/CssBaseline/CssBaseline.stories.mdx
+++ b/doc/Foundation/CssBaseline/CssBaseline.stories.mdx
@@ -90,6 +90,7 @@ export default function MyApp() {
 - The `normalText` typography is applied.
 - The `fontWeight` of `highlightText` typography is applied to `<b>` and `<strong>` elements.
 - [Font-smoothing](https://developer.mozilla.org/en-US/docs/Web/CSS/font-smooth) is customized.
+- [text-size-adjust](https://developer.mozilla.org/en-US/docs/Web/CSS/text-size-adjust) is set to `none`.
 
 ### Color
 
