feat(css-baseline): set color-scheme and accent-color

--- a/doc/Foundation/CssBaseline/CssBaseline.stories.mdx
+++ b/doc/Foundation/CssBaseline/CssBaseline.stories.mdx
@@ -96,3 +96,4 @@ export default function MyApp() {
 
 - Sets the text `color` to the accent color `.acce1` <HvAvatar status="atmo5" backgroundColor="acce1" size="XS" variant="square" containerProps={{ style: { display: "inline-block", verticalAlign: "middle", transform: "scale(0.8)" } }}> </HvAvatar>.
 - Sets the `background-color` to the atmosphere color `.atmo2` <HvAvatar status="atmo5" backgroundColor="atmo2" size="XS" variant="square" containerProps={{ style: { display: "inline-block", verticalAlign: "middle", transform: "scale(0.8)" } }}> </HvAvatar>.
+- Sets the [`color-scheme`](https://developer.mozilla.org/en-US/docs/Web/CSS/color-scheme) and [`accent-color`](https://developer.mozilla.org/en-US/docs/Web/CSS/accent-color) according to the active theme.
