fix(Templates): fix Asset Inventory code link

--- a/doc/Templates/Templates.stories.mdx
+++ b/doc/Templates/Templates.stories.mdx
@@ -25,7 +25,7 @@ The UI Kit templates correspond to Design System patterns that consist on the co
       story="Main"
       image={asset_inventory}
       title="Asset Inventory"
-      code="https://github.com/lumada-design/hv-uikit-react/templates/AssetInventory/AssetInventory.stories.js"
+      code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/AssetInventory/stories"
     />
     <TemplateItem
       kind="Templates/Asset Inventory"
