docs(templates): add form template

--- a/doc/Templates/Templates.stories.mdx
+++ b/doc/Templates/Templates.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from "@storybook/addon-docs";
 import asset_inventory from "../assets/asset_inventory.png";
 import kpis_list from "../assets/kpis_list.png";
-import placeholder from "../assets/placeholder.png";
+import form from "../assets/form.png";
 
 import LinkTo from "@storybook/addon-links/react";
 import TemplateItem from "./TemplatesTable/TemplateItem";
@@ -36,11 +36,11 @@ The UI Kit templates correspond to Design System patterns that consist on the co
       code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/KpisList"
     />
     <TemplateItem
-      kind="Templates/Asset Inventory"
+      kind="Templates/Form"
       story="Main"
-      image={placeholder}
-      title="Coming Soon"
-      disabled
+      image={form}
+      title="Form"
+      code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/Form"
     />
   </div>
 </div>
